--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 		sonarVersion = '3.0'
 		jacocoVersion = '0.8.8'
         lombokVersion = '1.18.24'
+        okHttp3Version = '4.10.0'
 	}
 }
 
